# voice_assistant

./: .gitattributes  CMakeLists.txt  README.md  setup.sh
data/: distilbert-squad-128.onnx
include/: capture_audio.h  cmd_line_parser.h  voice_assistant.h
src/: CMakeLists.txt  capture_audio.cpp  main.cpp  voice_assistant.cpp
test/: CMakeLists.txt  DS_Mock.h  DS_Stub.cpp  main_test.cpp  voice_assistant_gtest.cpp
